# nimlib

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  library.h  library.test.cpp  test_run.cpp  vcpkg.json  version.h.in
cert/: server.crt  server.key
docs/: doc.md
src/: common.h  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  decorators.h  http.cpp  http.h  main.cpp  main.h  polling_server.cpp  polling_server.h  polling_server_with_logger.cpp  polling_server_with_logger.h  protocol.cpp  protocol.h  socket.h  state_manager.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_pool.cpp  tcp_connection_pool.h  tcp_socket.cpp  tcp_socket.h  tcp_socket_with_logger.cpp  tcp_socket_with_logger.h  test_run.cpp  timer.cpp  timer.h  tls_layer.cpp  tls_layer.h  types.h
src/botan/: callbacks.cpp  callbacks.h  credentials.cpp  tls_server.cpp  tls_server.h
src/common/: common.h  decorators.h  types.h
src/decorations/: implementations.h  polling_server_with_logger.h  tcp_socket_with_logger.h
src/http/: http.cpp  http.h  http_parser.cpp  http_parser.h  http_router.cpp  http_router.h  parser.cpp  parser.h  router.cpp  router.h
src/logger/: agent.cpp  agent.h  factory.cpp  factory.h  logger.cpp  logger.h
src/metrics/: aggregations.cpp  aggregations.h  builder.h  factory.cpp  factory.h  measurements.cpp  measurements.h  metric.cpp  metric.h  metric_store.cpp  metrics_store.cpp  metrics_store.h  timer.cpp  timer.h
src/tls/: tls_layer.cpp  tls_layer.h
src/tls/botan/: botan_tls_server.cpp  botan_tls_server.h  callbacks.cpp  callbacks.h  credentials.cpp  credentials.h  tls_policy.h  tls_server.cpp  tls_server.h
src/utils/: circular_array.h  helpers.cpp  helpers.h  split.h  state_manager.h  timer.cpp  timer.h
tests/: connection.test.cpp  http.test.cpp  main.test.cpp  polling_server.test.cpp  state_manager.test.cpp  tcp_connection.test.cpp  timer.test.cpp
tests/http/: http_parser.test.cpp  parser.test.cpp  router.test.cpp
tests/metrics/: aggregations.test.cpp  measure.test.cpp  measurements.test.cpp  metric.test.cpp  metric_store.test.cpp  timer.test.cpp
tests/support/: decorators.h  tcp_socket.mock.cpp  tcp_socket.mock.h
tests/utils/: circular_array.test.cpp  helpers.test.cpp  split.test.cpp  state_manager.test.cpp
